refactor(tests): Add assertions to test case
Test methods that did not have any assertion have been extended by an assertion.

Resolves Sonar findings of type: java:S2699 "Tests should include assertions"

related to #88